--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "escape-pod": "index.js"
   },
   "dependencies": {
+    "favicons": "^5.1.1",
     "mime-types": "^2.1.18",
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.17",
