--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
   },
   "dependencies": {
     "favicons": "^5.1.1",
-    "mime-types": "^2.1.19",
+    "mime-types": "^2.1.20",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
-    "nan": "^2.10.0",
-    "rimraf": "^2.6.2",
-    "taglib2": "^2.9.6"
+    "rimraf": "^2.6.2"
   },
   "devDependencies": {},
   "scripts": {
