--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   },
   "dependencies": {
     "favicons": "^5.1.1",
+    "fs-extra": "^7.0.0",
     "mime-types": "^2.1.20",
     "moment": "^2.22.2",
-    "moment-timezone": "^0.5.21",
-    "rimraf": "^2.6.2"
+    "moment-timezone": "^0.5.21"
   },
   "devDependencies": {},
   "scripts": {
