--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "fs-extra": "^7.0.0",
     "mime-types": "^2.1.20",
     "moment": "^2.22.2",
-    "moment-timezone": "^0.5.21"
+    "moment-timezone": "^0.5.21",
+    "smartypants": "^0.0.10"
   },
   "devDependencies": {},
   "scripts": {
