--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "favicons": "^5.2.0",
     "fs-extra": "^7.0.0",
+    "imagemin": "^6.0.0",
+    "imagemin-jpegtran": "^5.0.2",
+    "imagemin-optipng": "^5.2.1",
     "mime-types": "^2.1.20",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
