--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "favicons": "^5.2.0",
     "fs-extra": "^7.0.0",
     "imagemin": "^6.0.0",
-    "imagemin-jpegtran": "^5.0.2",
+    "imagemin-mozjpeg": "^7.0.0",
     "imagemin-optipng": "^5.2.1",
     "mime-types": "^2.1.20",
     "moment": "^2.22.2",
