--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mime-types": "^2.1.20",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
+    "music-metadata": "^3.1.3",
     "smartypants": "^0.0.10"
   },
   "devDependencies": {},
