--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "favicons": "^5.2.0",
     "fs-extra": "^7.0.0",
+    "humanize-url": "^2.0.0",
     "imagemin": "^6.0.0",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^6.0.0",
@@ -16,7 +17,8 @@
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "music-metadata": "^3.1.3",
-    "smartypants": "^0.0.10"
+    "smartypants": "^0.0.10",
+    "truncate-url": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
