--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
     "music-metadata": "^7.5.2",
+    "rss-parser": "^3.10.0",
     "smartypants": "^0.1.1",
     "truncate-url": "^1.0.0"
   },
